tests/ui/proc-macro/inner-attrs.stderr
error: expected non-macro inner attribute, found attribute macro `print_attr`
  --> $DIR/inner-attrs.rs:65:12
   |
LL |         #![print_attr]
   |            ^^^^^^^^^^ not a non-macro inner attribute

error: expected non-macro inner attribute, found attribute macro `print_attr`
  --> $DIR/inner-attrs.rs:69:12
   |
LL |         #![print_attr]
   |            ^^^^^^^^^^ not a non-macro inner attribute

error: expected non-macro inner attribute, found attribute macro `print_attr`
  --> $DIR/inner-attrs.rs:73:12
   |
LL |         #![print_attr]
   |            ^^^^^^^^^^ not a non-macro inner attribute

error: expected non-macro inner attribute, found attribute macro `print_attr`
  --> $DIR/inner-attrs.rs:77:12
   |
LL |         #![print_attr]
   |            ^^^^^^^^^^ not a non-macro inner attribute

error: aborting due to 4 previous errors

